# spatial-wl

./: .gitignore  LICENSE  README.md  meson.build
include/: render.h  shaders.h
protocol/: meson.build
shaders/: hello_world_fragment.glsl  hello_world_vertex.glsl  meson.build  shaders.c
src/: main.c
subprojects/: cglm.wrap
